--- a/index.html
+++ b/index.html
@@ -9,75 +9,47 @@
 </head>
 <h1>Welcome</h1>
 <p>
-  With innovative approaches and advanced methodologies, Vecta Corporation provides scalable business solutions to help
-  companies achieve success through revenue increase, cost management, and user satisfaction. Our approach stems from
-  the three most important business growth aspects: helping companies reach prospects, assist in converting prospects to
-  customers, and assist in retaining those customers. This is accomplished through our interactive solutions and
-  expertise in providing a memorable and positive user experience.
-</p>
-<p>
-  Our Solutions
-</p>
-<p>
-  vProspect 2.0
-  <br>
-  Define and research your target audience, define your strategy to reach that audience and present a strong and
-  memorable brand to that audience.
-</p>
-<p>
-  vConvert 2.0
-  <br>
-  Create a highly user-friendly and easy-to-navigate information architecture that will help your prospects interact
-  with the company on a highly interactive level.
-</p>
+With innovative approaches and advanced methodologies, Vecta Corporation provides scalable business solutions to help companies achieve success through revenue increase, cost management, and user satisfaction. Our approach stems from the three most important business growth aspects: helping companies reach prospects, assist in converting prospects to customers, and assist in retaining those customers. This is accomplished through our interactive solutions and expertise in providing a memorable and positive user experience.
 
-<p>
-  vRetain 1.0 <br>
-  Build on existing customer relationships to improve productivity and maximize customer loyalty, while growing
-  revenues.
-</p>
-<p>
-  Client Testimonials
-</p>
-<p>
-  Throughout the years we have worked with Vecta Corporation, we have always been amazed at the level of dedication and
-  professionalism that they have provided us and our WGDC products. It is this commitment that has increased both our
-  income and exposure exponentially.
-</p>
-<p>
-  Ferris Finkelstein <br>
-  Founder and CEO <br>
-  Dorknozzle <br>
-</p>
+Our Solutions 
 
-<p>
-  Incredible results from an incredible effort by the Vecta Corporation team! We are very pleased with the business
-  benefits we have rceived by working with them.
-</p>
-<p>
-  Justin Case <br>
-  CTO <br>
-  IX Inc. <br>
-</p>
-<p>
-  Contact Vecta Corporation
-</p>
-<p>
-  Vecta Corporation <br>
-  555 Technology Place <br>
-  San Diego, CA 92115 <br>
-  Tel. (800) 555-5555 <br>
-</p>
+vProspect 2.0
+Define and research your target audience, define your strategy to reach that audience and present a strong and memorable brand to that audience.
 
-<p>
-  Management Team
-</p>
-<p>
-  Agnes, Vice President, Accounting <br>
-  Damon, Director of Development <br>
-  Herbert, Director of Human Resources <br>
-  Mike, Vice President, Marketing <br>
-  Ferris, Founder and CEO <br>
+vConvert 2.0
+Create a highly user-friendly and easy-to-navigate information architecture that will help your prospects interact with the company on a highly interactive level.
+
+vRetain 1.0
+Build on existing customer relationships to improve productivity and maximize customer loyalty, while growing revenues.
+
+Client Testimonials
+
+Throughout the years we have worked with Vecta Corporation, we have always been amazed at the level of dedication and professionalism that they have provided us and our WGDC products. It is this commitment that has increased both our income and exposure exponentially.
+
+Ferris Finkelstein
+Founder and CEO
+Dorknozzle
+
+Incredible results from an incredible effort by the Vecta Corporation team! We are very pleased with the business benefits we have rceived by working with them.
+
+Justin Case
+CTO
+IX Inc.
+
+Contact Vecta Corporation
+
+Vecta Corporation
+555 Technology Place
+San Diego, CA 92115
+Tel. (800) 555-5555
+
+Management Team
+
+Agnes, Vice President, Accounting
+Damon, Director of Development
+Herbert, Director of Human Resources
+Mike, Vice President, Marketing
+Ferris, Founder and CEO
 </p>
 
 
